KSENROLL-13884: fixed spacing on course search details when additional info is displayed
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@73326 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/header.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/header.less
@@ -82,6 +82,7 @@
             & option {
                 background: @white; // Reset the option background. Otherwise, it'll inherit the parent's transparent background
                 font-family: @secondaryFontFamily;
+                color: @black;
             }
         }
     }
