--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/searchDetails.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/searchDetails.less
@@ -253,8 +253,14 @@
     }
 
     .kscr-SearchDetails-icon {
-      width: 1.5rem;
+      width: 2rem;
       float: left;
+      &--subterm {
+        .subterm-icon();
+      }
+      &--requisites {
+        .requisites-icon();
+      }
     }
 
     // mid format styling
