--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/util/icons.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/util/icons.less
@@ -89,3 +89,19 @@
     height: 2rem;
     width: 2rem;
 }
+
+// Additional Info Icons
+.additional-info-icon(@url) {
+  .icon(@url);
+  height: 2rem;
+  width: 2rem;
+  float: left;
+}
+
+.subterm-icon() {
+  .additional-info-icon('../images/icons/subterm.png');
+}
+
+.requisites-icon() {
+  .additional-info-icon('../images/icons/requisites.png');
+}
